--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,5 @@
-node_modules
-npm-debug.log
-dist
-.git
-.gitignore
-.env
-*.md
-.vscode
-coverage
-test
+node_modules;
+npm - debug.log;
+dist.git.gitignore.env.md.vscode;
+coverage;
+test;
